<resources>
    <string name="app_name">Quiz3</string>
    <string name="tv1_txt">This is a label</string>
    <string name="btn1_txt">Button1</string>
    <string name="btn2_txt">Button2</string>
    <string name="et1_hint">Type text here</string>
    <string name="et2_hint">Type number here</string>
    <string name="chk1_txt">Color</string>
    <string name="chk2_txt">Star</string>
    <string name="rdb1_txt">Option 1</string>
    <string name="rdb2_txt">Option 2</string>
</resources>